--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 license = "GPL-3.0-or-later"
 authors = ["†нøμ9нτςя¡мə <Th0ughtCr1me@protonmail.ch>"]
+description = "byte handling"
+documentation = "https://docs.rs/obg"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
