--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,13 @@ authors = ["†нøμ9нτςя¡мə <Th0ughtCr1me@protonmail.ch>"]
 description = "byte handling"
 documentation = "https://docs.rs/obg"
 readme = "README.md"
+homepage = "https://github.com/whynothingmatters/obg"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 aes = { version = "0.8.3", features = ["hazmat", "zeroize"] }
+atty = "0.2.14"
 cipher = { version = "0.4.4", features = ["alloc", "block-padding", "rand_core", "std", "zeroize", "blobby", "dev"] }
 clap = { version = "4.3.12", features = ["derive", "env", "string", "unicode", "wrap_help"] }
 clap_builder = { version = "4.3.19", features = ["env", "unicode", "string", "wrap_help"] }
@@ -20,6 +22,7 @@ hex = { version = "0.4.3", features = ["serde"] }
 hmac = { version = "0.12.1", features = ["std"] }
 pbkdf2 = { version = "0.12.2", features = ["rayon", "sha1", "std", "sha2", "password-hash"] }
 rand = { version = "0.8.5", features = ["std"] }
+rpassword = "7.2.0"
 # rand_core = { version = "0.6.4", features = ["alloc", "getrandom", "std", "serde"] } # re-exported by aes->cipher->crypto-common->generic-array
 serde = { version = "1.0.171", features = ["derive", "rc", "alloc"] }
 serde_json = { version = "1.0.103", features = ["alloc", "preserve_order", "indexmap", "float_roundtrip", "arbitrary_precision"] }
