--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 edition = "2021"
 license = "GPL-3.0-or-later"
 authors = ["†нøμ9нτςя¡мə <Th0ughtCr1me@protonmail.ch>"]
-description = "byte handling"
+description = "encrypt or decrypt something with nothing or vice-versa"
 documentation = "https://docs.rs/obg"
 readme = "README.md"
 homepage = "https://github.com/whynothingmatters/obg"
