--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde_repr = "0.1.16"
 serde_yaml = "0.9.23"
 sha3 = "0.10.8"
 shellexpand = { version = "3.1.0", features = ["full"] }
+time = "0.2.23"
 chrono = { version = "0.4.26", features = ["pure-rust-locales", "serde", "clock", "time", "oldtime", "iana-time-zone"] }
 url = { version = "2.4.0", features = ["serde", "expose_internals"] }
 
