--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "obg"
-version = "1.1.2"
+version = "1.1.6"
 edition = "2021"
 license = "GPL-3.0-or-later"
 authors = ["†нøμ9нτςя¡мə <Th0ughtCr1me@protonmail.ch>"]
@@ -31,6 +31,8 @@ shellexpand = { version = "3.1.0", features = ["full"] }
 time = "0.2.23"
 chrono = { version = "0.4.26", features = ["pure-rust-locales", "serde", "clock", "time", "oldtime", "iana-time-zone"] }
 url = { version = "2.4.0", features = ["serde", "expose_internals"] }
+console = "0.15.7"
+indicatif = "0.17.6"
 
 [[bin]]
 name = "obg"
