--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,11 @@ serde_yaml = "0.9.23"
 sha3 = "0.10.8"
 shellexpand = { version = "3.1.0", features = ["full"] }
 time = "0.2.23"
-chrono = { version = "0.4.26", features = ["pure-rust-locales", "serde", "clock", "time", "oldtime", "iana-time-zone"] }
 url = { version = "2.4.0", features = ["serde", "expose_internals"] }
 console = "0.15.7"
 indicatif = "0.17.6"
+gzip = "0.1.2"
+chrono = { version = "0.4.31", features = ["rustc-serialize", "alloc", "arbitrary", "rkyv", "pure-rust-locales", "libc", "serde"] }
 
 [[bin]]
 name = "obg"
