--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "obg"
-version = "1.1.3"
+version = "2.0.0"
 edition = "2021"
 license = "GPL-3.0-or-later"
 authors = ["†нøμ9нτςя¡мə <Th0ughtCr1me@protonmail.ch>"]
@@ -29,10 +29,13 @@ serde_yaml = "0.9.23"
 sha3 = "0.10.8"
 shellexpand = { version = "3.1.0", features = ["full"] }
 time = "0.2.23"
-chrono = { version = "0.4.26", features = ["pure-rust-locales", "serde", "clock", "time", "oldtime", "iana-time-zone"] }
 url = { version = "2.4.0", features = ["serde", "expose_internals"] }
 console = "0.15.7"
 indicatif = "0.17.6"
+gzip = "0.1.2"
+chrono = { version = "0.4.31", features = ["alloc", "arbitrary", "rkyv", "pure-rust-locales", "libc", "serde"] }
+chacha20 = { version = "0.9.1", features = ["std", "zeroize"] }
+iocore = "0.1.10"
 
 [[bin]]
 name = "obg"
@@ -45,3 +48,4 @@ path = "src/lib.rs"
 
 [dev-dependencies]
 k9 = "0.11.6"
+serde_assert = "0.5.0"
