--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
 /target
 /*.txt
-.obg-key*.yaml
-tests/ciphertext.jpg
-obg-key*.yaml
-tests/decrypted.jpg
-tests/testcases.cipher
-tests/testcases.plain
-tests/testcases.yaml
+/.obg-key*.yaml
+/tests/ciphertext.jpg
+/obg-key*.yaml
+/tests/decrypted.jpg
+/tests/testcases.cipher
+/tests/testcases.plain
+/tests/testcases.yaml
+/tests/pvn.cipher
+/tests/pvn.plain
+/tests/pvn.yml
 *.bin
 /*key*.yml
 /*key*.kgz
+/tests/ml.cipher
+/tests/ml.plain
